Add twp executions to pom.xml: generate-zip-jre, generate-zip-nojre Rename create-package to build-package, use script buildpackage.sh To run all of them at once: "mvn exec:exec@build-package exec:exec@generate-zip-jre exec:exec@generate-zip-nojre"